Ensure publication bullet images are visible

--- a/assets/css/screen_small.css
+++ b/assets/css/screen_small.css
@@ -24,6 +24,14 @@ p a img { display: block; float: none; margin: 0 auto; padding: 1em 0; }
 .prev { float: left; }
 .next { float: right; }
 
+/* Ensure that publication bullet images are visible, by keeping them within
+   the left margin of the content column. */
+ul.pubs li.epi, ul.pubs li.renal {
+    margin-left: 0;
+    background-size: 1.5em;
+    padding-left: 1.8em;
+}
+
 /* Don't justify text on narrow devices, word spacing looks terrible. */
 @media not all and (min-width: 30em) {
     #content { text-align: left; }
